# padnote

./: .gitignore  CMakeLists.txt  LICENSE_PORT.md  README.md
.github/workflows/: build.yml
PowerEditor/src/linux/: Backup.cpp  Backup.h  Buffer.cpp  Buffer.h  CMakeLists.txt  ColumnEditorDialog.cpp  ColumnEditorDialog.h  Config.cpp  Config.h  DocumentMapDock.cpp  DocumentMapDock.h  DocumentSwitcherDialog.cpp  DocumentSwitcherDialog.h  EditorTabs.cpp  EditorTabs.h  Encoding.cpp  Encoding.h  FileBrowserDock.cpp  FileBrowserDock.h  FindReplaceDialog.cpp  FindReplaceDialog.h  FunctionList.cpp  FunctionList.h  FunctionListDock.cpp  FunctionListDock.h  FunctionListXml.cpp  FunctionListXml.h  HashDialog.cpp  HashDialog.h  Languages.cpp  Languages.h  Localization.cpp  Localization.h  MacroManager.cpp  MacroManager.h  MainWindow.cpp  MainWindow.h  PluginLoader.cpp  PluginLoader.h  PreferencesDialog.cpp  (+22 more)
cmake/: NppCommon.cmake
debian/: README.Debian  changelog  control  copyright  install  padnote.desktop  rules
lexilla/: CMakeLists.txt
lexilla/lexers/: LexUser.cxx
packaging/: build-appimage.sh  padnote.desktop  padnote.xml
plugins/: CMakeLists.txt  linuxplugin.h
plugins/hello/: hello.c
scintilla/: CMakeLists.txt
scripts/: perf-record.sh  qt-scintilla.supp  valgrind-run.sh
